# telecomai

./: .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  telecom_agent.py  telecom_db.py
